fixes code highlight blocks on mobile

--- a/_sass/page-article.scss
+++ b/_sass/page-article.scss
@@ -55,4 +55,8 @@ article {
     iframe {
         align-self: center;
     }
+
+    @media (max-width: $medium-screen) {
+        margin-top: 50px;
+    }
 }
