--- a/_sass/page-index.scss
+++ b/_sass/page-index.scss
@@ -42,5 +42,10 @@ main {
         max-width: 1000px;
         padding-left: 20px;
         padding-right: 20px;
+
+        @media (max-width: $medium-screen) {
+            width: 95vw;
+            padding: 0;
+        }
     }
 }
